--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-
+<!-- TODO: make a cool mobile menu 
 <nav>
   <ul>
     <li><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Logint</a></li>
@@ -7,7 +7,7 @@
     <li><a routerLink="/course" routerLinkActive="active" ariaCurrentWhenActive="page">Second Component</a></li>
     <li><a routerLink="/courses" routerLinkActive="active" ariaCurrentWhenActive="page">SCourses</a></li>
   </ul>
-</nav>
+</nav>-->
 <div [@routeAnimations]="prepareRoute(outlet)">
   <router-outlet #outlet="outlet"></router-outlet>
 </div>
